Adiciona menu de navegação

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATV2 GitHub</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Sobre</a>
+      <a href="#">Contato</a>
+    </nav>
+  </body>
 </html>
