--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATV2 GitHub</title>
   </head>
-  <body></body>
+  <body>
+    <footer>
+      <p>&copy; 2024 Meu Website. Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
